removed shopping_cart as parameter

--- a/Thursday_Blank_Thieves.ipynb
+++ b/Thursday_Blank_Thieves.ipynb
@@ -614,22 +614,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'apples': '30'}\n",
       "Response not recoginized, please try again\n",
-      "Response not recoginized, please try again\n",
-      "{'apples': '25'}\n",
-      "{'apples': '25'}\n",
-      "{'apples': '25'}\n",
-      "{'apples': '25', 'oranges': '22'}\n",
-      "{'apples': '25', 'oranges': '22', 'limes': '30'}\n",
-      "{'oranges': '22', 'limes': '30'}\n",
-      "{'oranges': '22', 'limes': '30'}\n"
+      "{'apples': '30', 'banans': '20'}\n",
+      "{'apples': '30'}\n",
+      "{'apples': '30', 'oranges': '30'}\n",
+      "{'apples': '30', 'oranges': '30', 'grapes': '100'}\n",
+      "{'apples': '30', 'grapes': '100'}\n",
+      "{'apples': '30', 'grapes': '100'}\n"
      ]
     }
    ],
@@ -637,7 +636,7 @@
     "# Create a class called cart that retains items and has methods to add, remove, and show\n",
     "\n",
     "class Cart():\n",
-    "    def __init__(self, add, remove, show, shopping_cart):\n",
+    "    def __init__(self, add, remove, show):\n",
     "        self.add = add\n",
     "        self.remove = remove\n",
     "        self.show = show\n",
@@ -683,7 +682,7 @@
     "            \n",
     "\n",
     "    \n",
-    "new_add = Cart('add', 'remove', 'show', 'shopping cart')\n",
+    "new_add = Cart('add', 'remove', 'show')\n",
     "new_add.runner()\n",
     "    "
    ]
