--- a/Thursday_Blank_Thieves.ipynb
+++ b/Thursday_Blank_Thieves.ipynb
@@ -614,52 +614,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'apples': '30'}\n",
-      "Response not recoginized, please try again\n",
-      "{'apples': '30', 'banans': '20'}\n",
-      "{'apples': '30'}\n",
-      "{'apples': '30', 'oranges': '30'}\n",
-      "{'apples': '30', 'oranges': '30', 'grapes': '100'}\n",
-      "{'apples': '30', 'grapes': '100'}\n",
-      "{'apples': '30', 'grapes': '100'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a class called cart that retains items and has methods to add, remove, and show\n",
     "\n",
     "class Cart():\n",
-    "    def __init__(self, add, remove, show):\n",
-    "        self.add = add\n",
-    "        self.remove = remove\n",
-    "        self.show = show\n",
+    "    def __init__(self):\n",
     "        self.shopping_cart = {}\n",
     "        \n",
     "\n",
     "    def add_to_cart(self):\n",
-    "        self.add = self.shopping_cart\n",
     "        what_item = input('What item would you like to add?')\n",
     "        num_item = input('How many of this item would you like to add?')\n",
     "        self.shopping_cart[what_item] = num_item\n",
     "        print(self.shopping_cart)\n",
     "        \n",
     "    def remove_from_cart(self):\n",
-    "        self.remove = self.add\n",
     "        del_item = input('What item would you like to remove?')\n",
-    "        if del_item in self.add:\n",
-    "            del self.add[del_item]\n",
-    "            print(self.add)\n",
+    "        if del_item in self.shopping_cart:\n",
+    "            del self.shopping_cart[del_item]\n",
+    "            print(self.shopping_cart)\n",
+    "        else:\n",
+    "            print('Item not currently in shopping')\n",
     "    \n",
     "    def show_cart(self):\n",
-    "        self.show = self.add\n",
-    "        print(self.add)\n",
+    "        print(self.shopping_cart)\n",
     "\n",
     "\n",
     "\n",
@@ -682,7 +663,7 @@
     "            \n",
     "\n",
     "    \n",
-    "new_add = Cart('add', 'remove', 'show')\n",
+    "new_add = Cart()\n",
     "new_add.runner()\n",
     "    "
    ]
